@@ -27,6 +27,7 @@
 + New GraphicsPathExtensions class:
   + New AddRoundRectangle methods - just exposing the old private implementation for GraphicsPath with the improved
     corner radius handling mentioned above.
+  + New ToPath method
 
 
 ~~~~~~~~~
